devops/Docker/Caronte/proyectos/ppokemon/deploy/kubernetes/service-pokemon.yml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-service
  namespace: proyectopokemon
spec:
  type: NodePort
  selector:
    app: webpokemon
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30083
