devops/Docker/Caronte/proyectos/ppokemon/deploy/kubernetes/ingress-pokemon.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokemon-ingress
  namespace: proyectopokemon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: carmenasir.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pokemon-service
                port:
                  number: 80
    - host: www.carmenasir.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pokemon-service
                port:
                  number: 80
